tests/baselines/reference/nestedBlockScopedBindings15.errors.txt
tests/cases/compiler/nestedBlockScopedBindings15.ts(3,9): error TS7027: Unreachable code detected.
tests/cases/compiler/nestedBlockScopedBindings15.ts(10,9): error TS7027: Unreachable code detected.
tests/cases/compiler/nestedBlockScopedBindings15.ts(16,5): error TS7027: Unreachable code detected.
tests/cases/compiler/nestedBlockScopedBindings15.ts(25,5): error TS7027: Unreachable code detected.


==== tests/cases/compiler/nestedBlockScopedBindings15.ts (4 errors) ====
    for (; false;) {
        {
            let x;
            ~~~
!!! error TS7027: Unreachable code detected.
            () => x;
        }
    }
    
    for (; false;) {
        {
            let y;
            ~~~
!!! error TS7027: Unreachable code detected.
            y = 1;
        }
    }
    
    for (; false;) {
        switch (1){
        ~~~~~~
!!! error TS7027: Unreachable code detected.
            case 1:
                let z0;
                () => z0;
                break;
        }
    }
    
    for (; false;) {
        switch (1){
        ~~~~~~
!!! error TS7027: Unreachable code detected.
            case 1:
                let z;
                z = 1;
                break;
        }
    }